# ClaimeAI

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  INSTALLATION.md  README.md  config.toml  conftest.py  docker-compose.yml  pyproject.toml
claim_extractor/llm/: __init__.py  config.py
claim_extractor/nodes/: decomposition.py  disambiguation.py  selection.py  validation.py
claim_verifier/: evidence_summarization.py  prompts.py
claim_verifier/config/: __init__.py  nodes.py
claim_verifier/llm/: __init__.py  config.py
claim_verifier/nodes/: evaluate_evidence.py  generate_search_query.py  retrieve_evidence.py  search_decision.py
docs/: llm-providers.md  websearch-and-costs.md
docs/playbook/: claim-record-design.md  model-tier-selection.md
ingest/: __init__.py  alignment.py  chunking.py  citation_binder.py  draft_parser.py  draft_types.py  gap_report.py  pdf.py  routing.py  triage.py  vault_match.py  vault_serializer.py
project-management/: TASKS.md
scripts/: dev.py  run_from_pdf.py  run_heavy.py  spot_check_vault.py
tests/: test_alignment.py  test_citation_binder.py  test_claim_record.py  test_config.py  test_cost_tracking.py  test_draft_parser.py  test_evidence_summarization.py  test_gap_report.py  test_ingest.py  test_models.py  test_orchestration.py  test_routing.py  test_run_config.py  test_settings.py  test_triage.py  test_vault_match.py  test_vault_serializer.py
tests/fixtures/: make_fixture.py
utils/: README.md  __init__.py  claim_record.py  config.py  cost_tracking.py  llm.py  models.py  run_config.py  settings.py
workspace/: README.md
(+10 files in other folders)
